# zs-world

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  project_info.in
cmake/: copy_files.cmake
doc/: CMakeLists.txt  build.md  changes.md  codingstyle.md  credits.md  design.md  doc.md  example.md  faq.md  license_header.txt  module.md
zs/plugins/: ExamplePlugin.cpp  ExceptionNode.cpp  LongOutputNode.cpp  LongRuntimeNode.cpp
zs/world/: SceneInterface.cpp  SceneInterface.hpp  World.cpp  World.hpp  WorldExport.hpp
zs/world/async/: Awaitables.hpp  Coro.hpp  Event.cpp  Event.hpp  Executor.cpp  Executor.hpp  Generator.hpp  StateMachine.hpp
zs/world/core/: Archive.cpp  Archive.hpp  Command.cpp  Command.hpp  Concepts.hpp  ConsoleHelper.hpp  Serialization.hpp  Signal.cpp  Signal.hpp  Utils.cpp  Utils.hpp
zs/world/geometry/: SimpleGeom.cpp  SimpleGeom.hpp
zs/world/node/: Context.cpp  Context.hpp  NodeHelper.hpp  NodeManager.cpp  NodeManager.hpp  Nodes.cpp
zs/world/py_zpc_jit/: PyZpc.cpp  PyZpc.hpp
zs/world/render/: CMakeLists.txt
zs/world/render/shader_runtime/: CMakeLists.txt
zs/world/render/shader_runtime/private/: shader_internal_utils.h  shader_runtime.cpp  virtual_file_helper.cpp
zs/world/render/shader_runtime/private/impl/: virtual_filesystem.cpp  virtual_filesystem.h
zs/world/render/shader_runtime/public/: shader_descriptors.h  shader_mixins.h  shader_resource.h  shader_runtime.h  virtual_file_helper.h
zs/world/render/shader_runtime/tests/: test_slang_virtual_filesystem.cpp
zs/world/scene/: Camera.cpp  Camera.hpp  Primitive.cpp  Primitive.hpp  PrimitiveConversion.hpp  PrimitiveFromOtherForms.cpp  PrimitiveOperation.cpp  PrimitiveOperation.hpp  PrimitiveQuery.cpp  PrimitiveQuery.hpp  PrimitiveRenderer.cpp  PrimitiveRenderer.hpp  PrimitiveSerializer.cpp  PrimitiveSerializer.hpp  PrimitiveToOtherForms.cpp  PrimitiveTransform.cpp  PrimitiveTransform.hpp  SceneContext.cpp  SceneContext.hpp  Timeline.hpp
zs/world/system/: PyExecSystem.cpp  PyExecSystem.hpp  ResourceSystem.cpp  ResourceSystem.hpp  ResourceSystemLog.cpp  ResourceSystemPrimitive.cpp  ZsExecSystem.cpp  ZsExecSystem.hpp
zs/world/usd/: USDSceneDesc.cpp  USDSceneLight.cpp  USDSceneManager.cpp  USDScenePrim.cpp  USDScenePrim.hpp
